# shopify-store-analyzer-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: bulk_analyze.py  compare_competitors.py  export_to_csv.py  find_dropshippers.py  monitor_changes.py  quickstart.py
shopify_analyzer/: __init__.py  client.py  exceptions.py
