[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopify-store-analyzer"
version = "0.1.0"
description = "Python SDK for the Shopify Store Analyzer Apify actor — revenue, traffic, tech stack, brand age & dropshipper risk for any Shopify store."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "shopify", "shopify-scraper", "shopify-api", "shopify-analyzer",
    "shopify-store-analyzer", "shopify-revenue", "ecommerce-intelligence",
    "storeleads-alternative", "commerce-inspector-alternative",
    "web-scraping", "apify", "apify-actor", "python-sdk",
    "lead-generation", "competitive-intelligence", "dropshipping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/shopify-store-analyzer-python"
Documentation = "https://github.com/apivault-labs/shopify-store-analyzer-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/shopify-store-analyzer"
"Bug Tracker" = "https://github.com/apivault-labs/shopify-store-analyzer-python/issues"

[tool.setuptools.packages.find]
include = ["shopify_analyzer*"]
